// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated files > icon index barrel > ts components 1`] = `
"/* 
 * Auto-generated by nuxt-compose-icons.
 * Feel free to version this file, but do not edit directly as it will be overwritten at build time. 
 */


export { default as ArrowUpIcon } from './ArrowUpIcon';
export { default as LogoIcon } from './LogoIcon';
export { default as TrashIcon } from './TrashIcon';

"
`;

exports[`generated files > icon index barrel > vue components 1`] = `
"/* 
 * Auto-generated by nuxt-compose-icons.
 * Feel free to version this file, but do not edit directly as it will be overwritten at build time. 
 */


export { default as ArrowUpIcon } from './ArrowUpIcon.vue';
export { default as LogoIcon } from './LogoIcon.vue';
export { default as TrashIcon } from './TrashIcon.vue';

"
`;

exports[`generated files > size stylesheet > custom icon classes widen the selector 1`] = `
":root {
    --size-sm: 1.5rem;
    --size-md: 2rem;
    --size-lg: 3rem;
    --size-xl: 4rem;
}
/* 
 * We don't define fallback values to let the initial values subsist (if any).
 * This catches the case of a missing prop — instead of a module default,
 * we rely on the original value from the SVG. 
 */
.compose-icon, .my-icon {
&.size-sm {--icon-size: var(--size-sm)}

&.size-md {--icon-size: var(--size-md)}

&.size-lg {--icon-size: var(--size-lg)}

&.size-xl {--icon-size: var(--size-xl)}

}"
`;

exports[`generated files > size stylesheet > custom sizes are merged on top of the defaults 1`] = `
":root {
    --size-md: 20px;
    --size-sm: 1.5rem;
    --size-lg: 3rem;
    --size-xl: 4rem;
    --size-huge: 100px;
}
/* 
 * We don't define fallback values to let the initial values subsist (if any).
 * This catches the case of a missing prop — instead of a module default,
 * we rely on the original value from the SVG. 
 */
.compose-icon {
&.size-md {--icon-size: var(--size-md)}

&.size-sm {--icon-size: var(--size-sm)}

&.size-lg {--icon-size: var(--size-lg)}

&.size-xl {--icon-size: var(--size-xl)}

&.size-huge {--icon-size: var(--size-huge)}

}"
`;

exports[`generated files > size stylesheet > default sizes 1`] = `
":root {
    --size-sm: 1.5rem;
    --size-md: 2rem;
    --size-lg: 3rem;
    --size-xl: 4rem;
}
/* 
 * We don't define fallback values to let the initial values subsist (if any).
 * This catches the case of a missing prop — instead of a module default,
 * we rely on the original value from the SVG. 
 */
.compose-icon {
&.size-sm {--icon-size: var(--size-sm)}

&.size-md {--icon-size: var(--size-md)}

&.size-lg {--icon-size: var(--size-lg)}

&.size-xl {--icon-size: var(--size-xl)}

}"
`;
